# advent

./: .gitignore  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_12.py  pyproject.toml  template.py  test_day_01.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  utils.py
adventofcode/: my_template.py  utils.py
adventofcode/event_2015/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
adventofcode/event_2016/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
adventofcode/event_2017/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
adventofcode/event_2018/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
adventofcode/event_2019/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py
adventofcode/event_2020/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
adventofcode/event_2021/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  (+17 more)
event_2015/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
event_2016/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
event_2017/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
event_2018/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
event_2019/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py
event_2020/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
event_2021/: test_day_02.py  test_day_03.py  test_day_05.py  test_day_07.py  test_day_09.py  test_day_11.py  test_day_13.py  test_day_15.py  test_day_17.py  test_day_19.py  test_day_23.py
event_2022/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
input/: day_23_optimize.txt
(+155 files in other folders)
