[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Raimar Sandner <mail@raimar-sandner.de>"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.21.4"
pytest = "^6.2.5"
bitarray = "^2.3.4"
pytest-cases = "^3.6.5"
more-itertools = "^9.0.0"
tinyarray = "^1.2.4"
networkx = "^2.8.8"
numpy-indexed = "^0.3.5"
toolz = "^0.12.0"
pytest-xdist = "^3.1.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest-pycharm = "^0.7.0"
pytest-profiling = "^1.7.0"
ratelimitingfilter = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
