[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Raimar Sandner <mail@raimar-sandner.de>"]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.21.4"
pytest = "^7.4.3"
bitarray = "^2.3.4"
pytest-cases = "^3.6.5"
more-itertools = "^10.1.0"
tinyarray = "^1.2.4"
networkx = "^3.2.1"
numpy-indexed = "^0.3.5"
toolz = "^0.12.0"
pytest-xdist = "^3.1.0"
sortedcontainers = "^2.4.0"
primefac = "^2.0.12"

[tool.poetry.group.dev.dependencies]
pytest-pycharm = "^0.7.0"
pytest-profiling = "^1.7.0"
ratelimitingfilter = "^1.5"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ["C0115", "C0116"]
extension-pkg-allow-list = ["tinyarray"]
