[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Raimar Sandner <mail@raimar-sandner.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pytest = "^8.3.4"
bitarray = "^3.0.0"
pytest-cases = "^3.6.5"
more-itertools = "^10.1.0"
tinyarray = "^1.2.4"
networkx = "^3.2.1"
numpy-indexed = "^0.3.5"
toolz = "^1.0.0"
pytest-xdist = "^3.1.0"
sortedcontainers = "^2.4.0"
primefac = "^2.0.12"
portion = "^2.4.2"
python-igraph = "^0.11.3"
sympy = "^1.12"
advent-of-code-data = "^2.0.1"
keyring = "^24.3.0"

[tool.poetry.group.dev.dependencies]
pytest-profiling = "^1.7.0"
ratelimitingfilter = "^1.5"
pylint = "^3.0.3"
pyvis = "^0.3.2"
matplotlib = "^3.8.2"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ["C0115", "C0116", "R0903", "R0914", "R0913"]
extension-pkg-allow-list = ["tinyarray"]

[tool.pytest.ini_options]
addopts = "--log-cli-level=DEBUG"
